--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Adam Blakeney</title>
 </head>
 <body>
     <header>
@@ -45,17 +45,17 @@
     <section class="container-fluid">
         <div class="row bg-color-contact">
             <div class="col">
-                <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
-                <h5 class="uppercase text-center">Let's work together!</h5>
+                <h3 class="contact-heading uppercase text-center">You can find all my contact info on my resume!</h3>
+                <h5 class="uppercase text-center">Or you can fill out the contact form below.</h5>
 
                 <div class="center-form">
                     <form>
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Type message here" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                                <button type="submit" class="btn btn-secondary">Send the message</button>
                             </div>
                         </div>
                     </form>
